fix: standardization of global spacing (padding/margins) across all sections

--- a/src/components/styles/About.css
+++ b/src/components/styles/About.css
@@ -9,12 +9,14 @@
   width: var(--cWidth);
   margin: auto;
 }
+
 .about-me {
   padding: 50px 0px;
   padding-bottom: 0;
   width: 500px;
   max-width: calc(100% - 15px);
 }
+
 .about-me h3 {
   font-size: 25px;
   text-transform: uppercase;
@@ -35,16 +37,19 @@
     justify-content: center;
   }
 }
+
 @media only screen and (min-width: 768px) {
   .about-me {
     width: 500px;
     max-width: calc(100% - 70px);
     transform: translateY(0%);
   }
+
   .about-section {
     opacity: 1;
   }
 }
+
 @media only screen and (min-width: 1025px) {
   .about-section {
     width: var(--cWidth);
@@ -54,15 +59,20 @@
     padding: 0px;
     opacity: 1;
   }
+
   .about-me {
     padding: 0px;
+    padding-top: 10vh;
+    padding-bottom: 10vh;
     width: 50%;
   }
+
   .about-me p {
     font-size: 1.9vw;
     line-height: 2.3vw;
   }
 }
+
 @media only screen and (min-width: 1950px) {
   .about-me p {
     font-size: 2.5rem;
